fix dropdown text color on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -155,6 +155,9 @@ body{
   .navbar-nav .open .dropdown-menu > li > a {
     padding: 25px;
   }
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #333;
+  }
 }
 
 #wrapper {
